<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-apps-comicviewer</artifactId>
  <version>0.0.2-SNAPSHOT</version>

  <properties>
    <javapackager.name>zzzViewer</javapackager.name>
    <javapackager.assetsDir>src/main/package</javapackager.assetsDir>
    <rococoa.version>0.8.5</rococoa.version>
    <javacpp.platform>macosx-${os.arch}</javacpp.platform>
  </properties>

  <name>${javapackager.assetsDir}</name>

  <profiles>
    <profile>
      <id>local (not on github workflow)</id>
      <activation>
        <property>
          <name>!env.GITHUB_WORKFLOW</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>io.github.fvarrui</groupId>
            <artifactId>javapackager</artifactId>
            <version>1.7.0-SNAPSHOT</version>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>package</goal>
                </goals>
                <configuration>
                  <name>${javapackager.name}</name>
                  <organizationName>Copyright © 2022 by vavi, All rights reserved.</organizationName>

                  <mainClass>vavi.apps.comicviewer.Main</mainClass>
                  <runnableJar>${project.artifactId}-${project.version}.jar</runnableJar>
                  <generateInstaller>false</generateInstaller>
                  <bundleJre>true</bundleJre>
                  <jrePath>${java.home}</jrePath>

                  <assetsDir>${javapackager.assetsDir}</assetsDir>

                  <additionalResources>
                    <additionalResource>${project.build.outputDirectory}/logging.properties</additionalResource>
                    <additionalResource>${project.build.testOutputDirectory}/librococoa.dylib</additionalResource>
                  </additionalResources>

                  <vmArgs>
                    <vmArg>--add-opens</vmArg>
                    <vmArg>java.desktop/com.apple.eawt=ALL-UNNAMED</vmArg>
                    <vmArg>--add-opens</vmArg>
                    <vmArg>java.base/java.lang=ALL-UNNAMED</vmArg>
                    <vmArg>-Djna.library.path=/usr/local/lib:.</vmArg>
                    <vmArg>-Dapple.laf.useScreenMenuBar=true</vmArg>
                    <vmArg>-Djava.util.logging.config.file=./logging.properties</vmArg>
                  </vmArgs>

                  <macConfig>
                    <!-- true cause error -->
                    <codesignApp>false</codesignApp>
                    <infoPlist>
                      <additionalEntries>
                        <![CDATA[
                      <key>CFBundleName</key>
                      <string>${javapackager.name}</string>
                      <key>CFBundleShortVersionString</key>
                      <string>${git.build.time}</string>
                      <key>CFBundleDocumentTypes</key>
                      <array>
                        <dict>
                          <key>CFBundleTypeExtensions</key>
                          <array>
                            <string>zip</string>
                            <string>ZIP</string>
                          </array>
                          <key>CFBundleTypeName</key>
                          <string>ZIP Archive</string>
                          <key>CFBundleTypeRole</key>
                          <string>Viewer</string>
                          <key>LSTypeIsPackage</key>
                          <false/>
                          <key>NSPersistentStoreTypeKey</key>
                          <string>Binary</string>
                        </dict>
                        <dict>
                          <key>CFBundleTypeExtensions</key>
                          <array>
                            <string>rar</string>
                            <string>RAR</string>
                          </array>
                          <key>CFBundleTypeName</key>
                          <string>RAR Archive</string>
                          <key>CFBundleTypeRole</key>
                          <string>Viewer</string>
                          <key>LSTypeIsPackage</key>
                          <false/>
                          <key>NSPersistentStoreTypeKey</key>
                          <string>Binary</string>
                        </dict>
                      </array>
                    ]]>
                      </additionalEntries>
                    </infoPlist>
                  </macConfig>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <compilerArgs>
            <arg>-XDignore.symbol.file</arg> <!-- for com.apple.eawt -->
            <arg>--add-exports</arg>
            <arg>java.desktop/com.apple.eawt=ALL-UNNAMED</arg>
          </compilerArgs>
          <!-- https://stackoverflow.com/a/30472473 -->
          <fork>true</fork>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>copy</id>
            <phase>generate-resources</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.rococoa</groupId>
                  <artifactId>rococoa-core</artifactId>
                  <type>dylib</type>
                  <overWrite>false</overWrite>
                  <outputDirectory>${project.build.testOutputDirectory}</outputDirectory>
                  <destFileName>librococoa.dylib</destFileName>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>pl.project13.maven</groupId>
        <artifactId>git-commit-id-plugin</artifactId>
        <version>4.9.10</version>
        <executions>
          <execution>
            <id>get-the-git-infos</id>
            <goals>
              <goal>revision</goal>
            </goals>
            <phase>initialize</phase>
          </execution>
        </executions>
        <configuration>
          <generateGitPropertiesFile>false</generateGitPropertiesFile>
          <includeOnlyProperties>
            <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
          </includeOnlyProperties>
          <commitIdGenerationMode>full</commitIdGenerationMode>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M7</version>
        <configuration>
          <argLine>
            --add-opens java.desktop/com.apple.eawt=ALL-UNNAMED
            --add-opens java.base/java.lang=ALL-UNNAMED
            -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
            -Djna.library.path=/usr/local/lib
          </argLine>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/umjammer/*</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.9.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-commons</artifactId>
      <version>1.1.8</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer.vavi-apps-fuse</groupId>
      <artifactId>vavi-nio-file-archive</artifactId>
      <version>0.1.8</version>
      <exclusions>
        <exclusion>
          <groupId>org.jetbrains.kotlin</groupId>
          <artifactId>*</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.jetbrains.kotlinx</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-image-avif</artifactId>
      <version>0.0.2</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-image-jpegxl</artifactId>
      <version>0.0.4</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-awt</artifactId>
      <version>1.0.6</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-util-logging-asl</artifactId>
      <version>0.0.2</version>
    </dependency>
    <dependency>
      <groupId>org.rococoa</groupId>
      <artifactId>rococoa-core</artifactId>
      <version>${rococoa.version}</version>
    </dependency>
    <dependency>
      <groupId>org.rococoa</groupId>
      <artifactId>rococoa-contrib</artifactId>
      <version>${rococoa.version}</version>
    </dependency>

    <dependency>
      <groupId>vavi</groupId>
      <artifactId>vavi-image-filter-dnnsuperres</artifactId>
      <version>1.0.1</version>
    </dependency>
    <dependency> <!-- why not included -->
      <groupId>org.bytedeco</groupId>
      <artifactId>opencv-platform</artifactId>
      <version>4.5.5-1.5.7</version>
    </dependency>

<!-- too slow
    <dependency>
      <groupId>vavi</groupId>
      <artifactId>vavi-image-filter-ml</artifactId>
      <version>0.0.1-SNAPSHOT</version>
    </dependency>
-->

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>2.0.3</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
